--- a/jupyterquiz/jupyterquiz_test.html
+++ b/jupyterquiz/jupyterquiz_test.html
@@ -5,7 +5,7 @@
 
 <title>jupyterquiz_test</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
-
+	<H1>Testing syntax quizzes integration into a Jupyter Book</H1>
 
 
 <style type="text/css">
